@@ -1,3 +1,8 @@
+2009-01-01  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatar-audio.c (avt_play_audio):
+	fix: only set soundleft when device could be opened
+
 2008-12-02  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtmsg.c: split off the code for mingw
